# flutter_smb

./: .metadata  Dockerfile  Makefile  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/jniLibs/armeabi-v7a/: libflutter_smb.h
android/src/main/jniLibs/x86_64/: libflutter_smb.h
example/: Makefile  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_smb_example/: MainActivity.kt
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: flutter_smb.dart  flutter_smb_bindings_generated.dart
lib/src/: flutter_smb.dart
linux/: CMakeLists.txt
macos/: flutter_smb.podspec
macos/Classes/: flutter_smb.c  flutter_smb.h
macos/Classes/go/: libgo.h
src/: CMakeLists.txt  GoBuild.cmake  Makefile  MakefileTest  flutter_smb.c  flutter_smb.go  flutter_smb.h  go.mod  go.sum
src/cmd/shared/: shared.go
src/cmd/static/: static.go
src/go/: CMakeLists.txt  go.mod
src/internal/smb/: smb.go
windows/: .gitignore  CMakeLists.txt
